syntax = "proto3";

package jaennil.effective_mobile_internship_ten_three;

option go_package = ".;pb";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){}
    rpc AuthUser(AuthUserRequest) returns (AuthUserResponse){}
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {}
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

message CreateUserRequest {
    string username = 1;
    string password = 2;
}

message CreateUserResponse {
}

message AuthUserRequest {
    string username = 1;
    string password = 2;
}

message AuthUserResponse {
    string accessToken = 1;
}

message UpdateUserRequest {
    string username = 1;
}

message UpdateUserResponse {
}

message GetUsersRequest {
}

message GetUsersResponse {
    repeated string usernames = 1;
}

message DeleteUserRequest {
}

message DeleteUserResponse {
}
